--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title>Zaxabox</title>
+  <title>Zexabox</title>
 
   <!-- third party -->
     <script src="bower_components/angular/angular.min.js"></script>
@@ -18,6 +18,7 @@
     <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/layer/layer.js"></script>
     <link rel="stylesheet" href="bower_components/bootswatch/paper/bootstrap.min.css" />
   <!-- /third party -->
 
