--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   -->
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
   <title>Zexabox</title>
 
   <!-- third party -->
